deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risi-project-kubernetes
spec:
  selector:
    matchLabels:
      name: risi-project-kubernetes
  template:
    metadata:
      labels:
        name: risi-project-kubernetes
    spec:
      containers:
        - name: app
          image: rejamen/risi-project-kubernetes:1.0.5
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: secrets
              mountPath: /etc/secrets
        - name: db
          image: postgres:12
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: secrets
          downwardAPI:
            items:
              - path: "POSTGRES_USER"
                fieldRef:
                  fieldPath: metadata.annotations['POSTGRES_USER']
              - path: "POSTGRES_PASSWORD"
                fieldRef:
                  fieldPath: metadata.annotations['POSTGRES_PASSWORD']
              - path: "POSTGRES_DB"
                fieldRef:
                  fieldPath: metadata.annotations['POSTGRES_DB']
        - name: postgres-storage
          emptyDir: {}
