database_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    name: risi-project-kubernetes
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
