service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: risi-project-kubernetes
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    name: risi-project-kubernetes
